--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -8,25 +8,31 @@
 	width: 100vw;
 	height: 100vh;
 	background-color: #38383873;
+	opacity: 1;
+	transition: opacity 0.3s ease 0s;
 }
 .popup__container{
 	position: relative;
-	top: 30%;
-	left: calc(50% - 320px);
-	width: 640px;
-	height: 360px;
-	
+	top: 23%;
+	height: 50vh;
+	width: calc(0.89 * 100vh);
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	user-select: none;
+
 }
 .popup__promo{
 	position: relative;
-	display: block;
-	width: 100%;
+	z-index: 300;
 	height: 100%;
 	user-select: none;
 	pointer-events: none;
 }
 
 .hide{
-	left: 100vw;
+	left: 120vw;
+	opacity: 0;
+	transition: opacity 0.3s ease 0s;
 }
