--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ div{
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
+	transition: all 0.1s linear 0s;
 }
 .gratulation__wrapper{
 	position: relative;
@@ -53,7 +54,8 @@ div{
 	height: calc(0.735 * 100vh);
 	left: -40px;
 
-	background-color: #93bb93;
+	/* background-color: #93bb93; */
+	background-color: #009999;
 
 	display: flex;
 	flex-direction: column;
@@ -75,8 +77,8 @@ div{
 
 }
 .item:hover{
-	background-color: rgb(238, 92, 92);
-	transition: all 0.2s ease 0s;
+	background-color: #FF0033;
+	transition: all 0.24s ease-out 0s;
 }
 .item__container{
 	font-size:  calc(0.0535 * 100vh);
@@ -91,10 +93,111 @@ span{
 	pointer-events: none;
 }
 .clicked{
-	background-color: rgb(238, 92, 92);
+	background-color: #FF0033;
 	transition: all 0.2s ease 0s;
 }
 
 .winner{
-	background-color: rgb(121, 198, 19);
+	background-color: #00CC33;
+}
+
+
+
+
+
+
+
+
+
+.loader {
+	background: radial-gradient(#f8da6ebd, #e39b5c);
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: 99999;
+}
+
+.loader-inner {
+	bottom: 0;
+	height: 60px;
+	left: 0;
+	margin: auto;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100px;
+}
+
+.loader-line-wrap {
+	animation: 
+	spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite
+ ;
+	box-sizing: border-box;
+	height: 50px;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	transform-origin: 50% 100%;
+	width: 100px;
+}
+.loader-line {
+	border: 4px solid transparent;
+	border-radius: 100%;
+	box-sizing: border-box;
+	height: 100px;
+	left: 0;
+	margin: 0 auto;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 100px;
+}
+.loader-line-wrap:nth-child(1) { animation-delay: -50ms; }
+.loader-line-wrap:nth-child(2) { animation-delay: -100ms; }
+.loader-line-wrap:nth-child(3) { animation-delay: -150ms; }
+.loader-line-wrap:nth-child(4) { animation-delay: -200ms; }
+.loader-line-wrap:nth-child(5) { animation-delay: -250ms; }
+
+.loader-line-wrap:nth-child(1) .loader-line {
+	border-color: hsl(0, 80%, 60%);
+	height: 90px;
+	width: 90px;
+	top: 7px;
+}
+.loader-line-wrap:nth-child(2) .loader-line {
+	border-color: hsl(60, 80%, 60%);
+	height: 76px;
+	width: 76px;
+	top: 14px;
+}
+.loader-line-wrap:nth-child(3) .loader-line {
+	border-color: hsl(120, 80%, 60%);
+	height: 62px;
+	width: 62px;
+	top: 21px;
+}
+.loader-line-wrap:nth-child(4) .loader-line {
+	border-color: hsl(180, 80%, 60%);
+	height: 48px;
+	width: 48px;
+	top: 28px;
+}
+.loader-line-wrap:nth-child(5) .loader-line {
+	border-color: hsl(240, 80%, 60%);
+	height: 34px;
+	width: 34px;
+	top: 35px;
+}
+
+@keyframes spin {
+	0%, 15% {
+	transform: rotate(0);
+ }
+ 100% {
+	transform: rotate(360deg);
+ }
 }
